--- a/css/layout.css
+++ b/css/layout.css
@@ -6,16 +6,15 @@
 .mainScreen{
   position: absolute;
   top: 0;
-  width:60%;
-  margin-top:2%;
-  margin-left:20%;
+  width:96%;
+  margin:2%;
   padding-top: 70%;
 }
 
-canvas {
+.mainCanvas {
   position:absolute;
   width:96%;
-  top:5%;
+  top:6%;
   height:auto;
   left:2%;
 }
