--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
   box-shadow: 0 0 20px 5px rgba(0,0,0,0.5);
 }
 
-canvas {
+.mainCanvas {
   background-color: white;
   border-radius:15px;
   border-style: solid;
