--- a/css/layout.css
+++ b/css/layout.css
@@ -1,40 +1,66 @@
-.mainWrapper{
-  width: 100%;
-  height: 100%;
+
+*{
+  box-sizing: border-box;
+  border: 1px solid black;
+  margin: 0%;
+  padding: 0%;
 }
 
-.mainScreen{
-  position: absolute;
-  top: 0;
-  width:96%;
-  margin:2%;
-  padding-top: 70%;
+.viewWrapper {
+  max-width: 800px;
+  margin: auto;
 }
 
-.mainCanvas {
-  position:absolute;
-  width:96%;
-  top:6%;
-  height:auto;
-  left:2%;
+.viewGame {
+  background-color: yellow;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-top: 1%;
 }
 
-.mainTitle{
-  position: absolute;
-  top:1%;
-  width: 100%;
+.viewHeader{
+  background-color: red;
+  text-align: center;
+
 }
 
-.mainInfo{
-  position: absolute;
-  width: 25%;
-  top: 6%;
-  left: 3%;
+.viewContent {
+  background: darkred;
+  margin: 1%;
+  display: flex;
 }
 
-.mackerelOS{
-  position:absolute;
-  left:3%;
-  bottom: 6%;
-  width:40%;
+.viewContentLeft {
+  background: white;
+  flex: 0 0 50%;
+}
+
+.viewContentLeftCanvas {
+  background: lightblue;
+}
+
+.viewContentLeftInfo {
+  background: lightgreen;
+}
+
+.viewContentRight {
+  background: orange;
+  flex: 1;
+}
+
+.viewContentRightEcholot {
+  background: violet;
+  text-align: center;
+  height: 50%;
+
+}
+
+.viewContentRightButtons {
+  background: grey;
+  text-align: center;
+  height: 50%;
+}
+
+.viewFooter{
+  background-color: green;
 }
