--- a/css/layout.css
+++ b/css/layout.css
@@ -2,61 +2,53 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-html, body{
   padding: 0;
   margin: 0;
-  height: 100%;
 }
 
 .viewInfo {
-  padding: 0.2em;
+  position: relative;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .viewInfoItem {
-  display: inline;
+  display: inline-block;
 }
 
 
-@media (min-aspect-ratio: 2/1) {
-  .viewWrapper {
-    max-width: 1200px;
-    width: 68%;
-    margin: auto;
-    height:auto;
-  }
-}
-
-@media (max-aspect-ratio: 2/1) {
-  .viewWrapper {
-    max-width: 1200px;
-    width: 84%;
-    margin: auto;
-    height:auto;
-  }
+.viewWrapper {
+  position: absolute;
+  left:     50%;
+  bottom:    0%;
+  padding: 2%;
+  padding-top: 4%;
 }
 
 .viewGame {
-  margin: 2%;
+  width: 100%;
+  height: 100%;
 }
 
 .viewHeader{
   text-align: center;
-  padding: 0.2em;
+  height: 8%;
 }
 
 .viewContent {
   display: flex;
+  height: 85%;
+
 }
 
 .viewContentLeft {
   flex: 0 0 62%;
-  margin: 1%;
 }
 
 .viewContentLeftCanvas {
   margin: 1%;
+  margin-left: 3%;
 }
 
 .viewContentRight {
@@ -76,5 +68,5 @@ html, body{
 }
 
 .viewFooter{
-  padding: 0.2em;
+  height: 7%;
 }
